--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -12,15 +12,15 @@ tour.name = 291 Rooftop
 
 ### Button
 Button_642B2EAB_7D2A_1A12_41CB_46FBE1F64429.label = SALÃO CLIMATIZADO
-Button_642B2EAB_7D2A_1A12_41CB_46FBE1F64429_mobile.label = SALÃO CLIMATIZADO
 Button_64CE7478_7D2B_EEFF_41D6_D867636B79C2.label = SALA VIP
-Button_64CE7478_7D2B_EEFF_41D6_D867636B79C2_mobile.label = SALA VIP
 Button_67006B11_7D2A_3A0F_41C2_964C355C1F7F.label = SALÃO EXTERNO
-Button_67006B11_7D2A_3A0F_41C2_964C355C1F7F_mobile.label = SALÃO EXTERNO
 Button_673B86E1_7D2A_6A0E_41DC_5F1C0AA4B32E.label = LOUNGE RECEPÇAO
-Button_673B86E1_7D2A_6A0E_41DC_5F1C0AA4B32E_mobile.label = LOUNGE RECEPÇAO
 Button_67736086_7D2A_2615_41D6_CEC50644C618.label = REGISTRE SEU MOMENTO
-Button_67736086_7D2A_2615_41D6_CEC50644C618_mobile.label = REGISTRE SEU MOMENTO
+Button_91451ADC_8769_7DEC_41DD_5316619FAC16_mobile.label = LOUNGE RECEPÇÃO
+Button_914A0C64_8769_74DC_41D9_06DBABBD843B_mobile.label = SALÃO EXTERNO
+Button_914F7DC4_8769_77DC_41D3_B52D5B6562A2_mobile.label = SALÃO CLIMATIZADO
+Button_91F1D7BB_8769_13B4_41C3_5D968AA840EC_mobile.label = SALÃO VIP
+Button_928E668C_8769_746C_41C5_5FA66759A009_mobile.label = REGISTRE SEU MOMENTO
 Button_DEA9ABD5_FBC9_F303_41E1_AB7527566753.label = RESERVE SUA MESA
 Button_DEA9ABD5_FBC9_F303_41E1_AB7527566753_mobile.label = RESERVE SUA MESA
 Button_E60B8634_FB49_1501_41D3_1EB9128CFA11.label = IMAGEM AÉREA
@@ -54,3 +54,4 @@ video_5D99DC41_7DFE_1E0E_419A_9078D87AF1C2.label = IMG_4334
 LinkBehaviour_6162C6D3_7DDA_6A32_41BB_BE33328D8BCD.source = https://linktr.ee/291rooftop
 LinkBehaviour_62D0F9EE_7DEA_2612_414A_7EBE521388CE.source = https://www.instagram.com/291rooftop/
 LinkBehaviour_63F45B8F_7DDE_1A13_41D8_B0C54469699D.source = https://linktr.ee/291rooftop
+LinkBehaviour_9464FCBC_871B_15AD_41C0_6F7A56A85255.source = https://www.instagram.com/291rooftop/
